# bluez-player

./: Cargo.toml  README.md  bluez-player_0.1.0.bb  bluez-player_git.bb
src/: btdbus.rs  hello.rs  main.rs
