[package]
name = "bluez_player"
version = "0.1.0"
edition = "2018"
repository = "https://github.com/AmateurECE/bluez-player.git"
license = "MIT"
description = "Stream audio from incoming Bluetooth connections to the system PCM device."
homepage = "https://github.com/AmateurECE/bluez-player"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dbus = "0.9.3"
dbus-tokio = "0.7.4"
dbus-crossroads = "0.4.0"
tokio = { version = "~1.8", features = ["full"] }
futures = "0.3"
